# plaid-3

client/: cargo.toml
client/src/: main.rs
plaidrustapi/: Cargo.toml
plaidrustapi/src/: genericclient.rs  lib.rs  readme.txt
plaidrustapi/src/doc/: search-index.js  settings.html  source-files.js
plaidrustapi/src/doc/lib/: all.html  index.html  sidebar-items.js
plaidrustapi/src/doc/lib/greetings/: index.html  sidebar-items.js
plaidrustapi/src/doc/lib/greetings/english/: fn.goodbye.html  fn.hello.html  index.html
plaidrustapi/src/doc/lib/greetings/spanish/: fn.goodbye.html  fn.hello.html  index.html  sidebar-items.js
plaidrustapi/src/doc/src/lib/: lib.rs.html
plaidrustapi/src/doc/src/lib/greetings/: english.rs.html
plaidrustapi/src/greetings/: english.rs
plaidrustapi/src/types/: account.rs  liabilities.rs  mod.rs
plaidrustapi/tests/: lib.rs
