[package]
name="rustplaidapi"
version = "0.1.0"
authors = ["Whaylon Coleman <colemanwhaylon@yahoo.com>"]
edition = "2018"       # The edition of the target.

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures01 = { version = "0.1", package = "futures", optional = true }
reqwest = { version = "0.10", features = ["json", "gzip"], optional = true }
reqwest09 = { version = "0.9", package = "reqwest", optional = true }
secrecy = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

[dev-dependencies]
dotenv = "0.15.0"
once_cell = "1.4.1"
tokio = { version = "0.2", features = ["macros"] }
tokio01 = { version = "0.1", package = "tokio" }